Add Spark adapter: translate Catalyst logical plans into the transformation IR
Implements ROADMAP.md Phase 1c's "Spark adapter" sub-phase: the bridge
from real Spark execution into com.example.ir, grounded in empirical
investigation of Spark 3.5.1's actual Catalyst plan shapes (run directly
via spark-shell, not assumed from memory/docs — see docs/SPARK_ADAPTER.md
for the findings) rather than guessed API surface.

## Integration point

Investigated Spark's plan-inspection extension mechanisms (direct
Dataset.queryExecution access, QueryExecutionListener,
SparkSessionExtensions) and used the least invasive one that fits: the
adapter's core translate() takes a plain LogicalPlan, agnostic to how it
was obtained. QueryExecutionListener (SparkAdapterListener) is used for
the runner integration since only *observing* a plan is needed, never
rewriting one.

Uses .analyzed rather than .optimizedPlan: confirmed empirically that the
optimizer's EliminateSubqueryAliases rule strips relation aliases
entirely, which this IR needs to disambiguate self-joins.

## New spark-adapter module (com.example.sparkadapter)

- SparkPlanAdapter.translate: Read/Write (via
  InsertIntoHadoopFsRelationCommand, unwrapping the internal WriteFiles
  node), relations (LogicalRelation + HadoopFsRelation), projections,
  filters, joins, aggregations (GROUP BY), aliases (SubqueryAlias ->
  Read.alias), casts, unions, windows, and arbitrarily nested expressions
- BinaryOperator.symbol covers arithmetic/comparison/boolean uniformly;
  everything else falls through to a generic FunctionCall built from
  Catalyst's own prettyName/children, covering most builtin SQL functions
  without enumerating Spark's Expression subclasses one by one
- Never throws: an unrecognized plan node becomes ir.Unsupported, an
  unrecognized expression construct (UDFs, multi-arg aggregates) degrades
  to a best-effort FunctionCall -- both paired with a Diagnostic via
  TranslationResult, never an exception
- SparkAdapterListene